crates/k-rust/tests/snapshots/inner_rules__reports_overloaded_terminators_without_a_unique_least_sort.snap
---
source: crates/k-rust/tests/inner_rules.rs
expression: error
---
Parse(
    RuleParseError {
        module: "MAIN",
        sentence_type: "rule",
        source: Some(
            "rules.k",
        ),
        location: Some(
            Location {
                start_line: 7,
                start_column: 3,
                end_line: 7,
                end_column: 26,
            },
        ),
        error: OverloadedTerminator {
            possible_sorts: [
                Sort {
                    name: "First",
                    parameters: [],
                },
                Sort {
                    name: "Second",
                    parameters: [],
                },
            ],
        },
    },
)
