crates/k-rust/tests/snapshots/inner_rules__resolves_an_element_of_an_overloaded_user_list.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax EmptyStmt\n  syntax Instr ::= EmptyStmt\n  syntax Defn ::= EmptyStmt | \"d\" [symbol(d)]\n  syntax Stmt ::= Instr | Defn\n  syntax EmptyStmts ::= List{EmptyStmt, \"\"} [overload(listStmt), terminator-symbol(\".List{\\\"listStmt\\\"}\")]\n  syntax Instrs ::= List{Instr, \"\"} [overload(listStmt)]\n  syntax Defns ::= List{Defn, \"\"} [overload(listStmt)]\n  syntax Stmts ::= List{Stmt, \"\"} [overload(listStmt)]\n  syntax Instrs ::= EmptyStmts\n  syntax Defns ::= EmptyStmts\n  syntax Stmts ::= Instrs | Defns\n  syntax TypesInfo ::= \"info\" [symbol(info)]\n  syntax TypesInfo ::= \"#types2indices\" \"(\" Defns \",\" TypesInfo \")\" [function, symbol(types2indices)]\n  rule #types2indices(_D DS, M) => #types2indices(DS, M) [owise]\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "types2indices(`___MAIN_Defns_Defn_Defns`(#SemanticCastToDefn(_D),#SemanticCastToDefns(DS)),#SemanticCastToTypesInfo(M))=>types2indices(#SemanticCastToDefns(DS),#SemanticCastToTypesInfo(M))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
