crates/k-rust/tests/snapshots/inner_rules__resolves_an_explicit_kast_token_over_a_generic_application.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Int ::= r\"[0-9]+\" [token]\n  syntax Exp ::= \"use\" \"(\" Int \")\" [symbol(use)]\n  rule use(#token(\"1\", \"Int\")) => use(1)\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "use(#token(\"1\",\"Int\"))=>use(#token(\"1\",\"Int\"))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
