crates/k-rust/tests/snapshots/inner_rules__resolves_parametric_rules_with_z3.snap
---
source: crates/k-rust/tests/inner_rules.rs
expression: "sources.iter().map(|source|\n{\n    resolve_rule_bubbles(&lowered(source)).map(|definition|\n    {\n        definition.main_module().unwrap().local_sentences.iter().filter_map(sentence_summary).map(|summary|\n        format!(\"{summary:?}\")).collect::<Vec<_>>()\n    })\n}).collect::<Vec<_>>()"
---
[
    Ok(
        [
            "SentenceSummary { kind: \"rule\", body: \"box(same{Int}(#token(\\\"1\\\",\\\"Int\\\")))=>box(#token(\\\"1\\\",\\\"Int\\\"))\", requires: \"#token(\\\"true\\\",\\\"Bool\\\")\", ensures: Some(\"#token(\\\"true\\\",\\\"Bool\\\")\"), label: None }",
        ],
    ),
    Ok(
        [
            "SentenceSummary { kind: \"rule\", body: \"take{K}(#token(\\\"1\\\",\\\"Int\\\"))=>#token(\\\"1\\\",\\\"Int\\\")\", requires: \"#token(\\\"true\\\",\\\"Bool\\\")\", ensures: Some(\"#token(\\\"true\\\",\\\"Bool\\\")\"), label: None }",
        ],
    ),
]
