crates/k-rust/tests/snapshots/inner_rules__resolves_prefix_terminals_with_the_global_scanner.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Id ::= r\"[a-z]\" [token]\n  syntax Exp ::= Id\n  syntax Exp ::= Exp \"==\" Exp [symbol(eq)]\n  syntax Exp ::= Exp \"==K\" Exp [symbol(eqK)]\n  rule a ==K b => a == b\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "eqK(#token(\"a\",\"Id\"),#token(\"b\",\"Id\"))=>eq(#token(\"a\",\"Id\"),#token(\"b\",\"Id\"))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
