crates/k-rust/tests/snapshots/inner_rules__resolves_syntax_priority.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Id ::= r\"[a-z]\" [token]\n  syntax Exp ::= Id\n  syntax Exp ::= Exp \"*\" Exp [symbol(times)]\n               > Exp \"+\" Exp [symbol(plus)]\n  rule a + b * c => c * b + a\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "plus(#token(\"a\",\"Id\"),times(#token(\"b\",\"Id\"),#token(\"c\",\"Id\")))=>plus(times(#token(\"c\",\"Id\"),#token(\"b\",\"Id\")),#token(\"a\",\"Id\"))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
