crates/k-rust/tests/snapshots/inner_rules__scans_adjacent_closing_brackets_as_separate_terminals.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Item ::= \"x\" [symbol(x)]\n                | \"[\" Items \"]\" [symbol(list)]\n  syntax Items ::= List{Item, \",\"} [symbol(items)]\n  syntax Out ::= \"declared-f\" \"(\" Item \")\" [symbol(f)]\n  rule f([x, [x]]) => f(x)\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "f(list(items(x(.KList),items(list(items(x(.KList),`.List{\"items\"}`(.KList))),`.List{\"items\"}`(.KList)))))=>f(x(.KList))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
