crates/k-rust/tests/snapshots/inner_rules__scopes_a_cross_sort_top_level_rewrite_over_its_rhs_operator.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Pgm ::= \"run\" [symbol(run)]\n  syntax Exp ::= \"value\" [symbol(value)]\n               | Exp \"*\" Exp [symbol(times)]\n  rule run => value * value\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "run(.KList)=>times(value(.KList),value(.KList))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
