crates/k-rust/tests/snapshots/inner_rules__scopes_a_top_level_rewrite_over_boolean_connectives.snap
---
source: crates/k-rust/tests/inner_rules.rs
description: "K definition:\n\nmodule MAIN\n  syntax Bool ::= \"a\" [symbol(a)]\n  syntax Bool ::= Bool \"#And\" Bool [symbol(#And), assoc, left]\n  rule a => a #And a\nendmodule\n"
---
[
    SentenceSummary {
        kind: "rule",
        body: "a(.KList)=>#And(a(.KList),a(.KList))",
        requires: "#token(\"true\",\"Bool\")",
        ensures: Some(
            "#token(\"true\",\"Bool\")",
        ),
        label: None,
    },
]
